chapter 3 up all the way through Error Analysis

--- a/Ch3_classification.ipynb
+++ b/Ch3_classification.ipynb
@@ -675,7 +675,134 @@
     "select the precision/recall trade-off that fits your needs, and use ROC\n",
     "curves and ROC AUC scores to compare various models.\n",
     "\n",
-    "## Multiclass Classification"
+    "## Multiclass Classification\n",
+    "_Multinomial classifier_ distinguishes between more than two classes. Even though some algorithms only perform binary classifications, there are ways to still use them for multiple classes classification. One way is to create a system that classifies 10 different type images by taking one class at a time and classifying it against the rest. This is called _one-versus-rest_ (OvR) strategy. Another strategy is to train a binary classifier for every pair of classes: distinguish between 0 and 1 class, then between 0 and 2, then between 0 and 3 and so on. This is called _one-versus-one_ (OvO) strategy. For $N$ classes you need to train $\\frac{N\\times (N-1)}{2}$ classifiers.\n",
+    "\n",
+    "Scikit-Learn detects when you try to use a binary classification algorithm for a multiclass classification task, and it automatically runs OvR or OvO, depending on the algorithm:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5], dtype=uint8)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svm_clf = SVC()\n",
+    "svm_clf.fit(X_train, y_train)\n",
+    "svm_clf.predict([some_digit])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code trains the SVC on the training set using the original target classes from 0 to 9 ( y_train ), instead of the 5-versus-the-rest target classes ( y_train_5 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.72501977,  2.72809088,  7.2510018 ,  8.3076379 , -0.31087254,\n",
+       "         9.3132482 ,  1.70975103,  2.76765202,  6.23049537,  4.84771048]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This will return 10 scores per instance\n",
+    "some_digit_scores = svm_clf.decision_function([some_digit])\n",
+    "some_digit_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Highest score is the one corresponding to class 5\n",
+    "np.argmax(some_digit_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9], dtype=uint8)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svm_clf.classes_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svm_clf.classes_[5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**WARNING**: When a classifier is trained, it stores the list of target classes in its `classes_` attribute, ordered by value.\n",
+    "\n",
+    "If you want to force Scikit-Learn to use _one-versus-one_ or _one-versus-the-rest_, you can use the `OneVsOneClassifier` or `OneVsRestClassifier` classes"
    ]
   },
   {
@@ -683,7 +810,83 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Classify using OvR\n",
+    "from sklearn.multiclass import OneVsRestClassifier\n",
+    "\n",
+    "ovr_clf = OneVsRestClassifier(SVC())\n",
+    "ovr_clf.fit(X_train, y_train)\n",
+    "ovr_clf.predict([some_digits])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(ovr_clf.estimators_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trying SGD Classifier. No need for OvR or OvO as\n",
+    "# SGD directly classifies into multiple classes.\n",
+    "sgd_clf.fit(X_train, y_train)\n",
+    "sgd_clf.predict([some_digits])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sgd_clf.decision_function([some_digit])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see that the classifier is fairly confident about its prediction: almost all scores are largely negative, while class 5 has a score of ...\n",
+    "\n",
+    "You can evaluate this classifier using `cros_val_score()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_val_score(sgd_clf, X_train, y_train,\n",
+    "                cv=3, scoring=\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get 84% on all test folds. If we used a random classifier we would get 10%. We still can get a better score by scaling the inputs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "x_train_scaled = scaler.fit_transform(X_train.astype(np.float64))\n",
+    "cross_val_score(sgd_clf,)"
+   ]
   }
  ],
  "metadata": {
