--- a/Ch3_classification.ipynb
+++ b/Ch3_classification.ipynb
@@ -807,44 +807,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5], dtype=uint8)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Classify using OvR\n",
     "from sklearn.multiclass import OneVsRestClassifier\n",
     "\n",
     "ovr_clf = OneVsRestClassifier(SVC())\n",
     "ovr_clf.fit(X_train, y_train)\n",
-    "ovr_clf.predict([some_digits])"
+    "ovr_clf.predict([some_digit])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(ovr_clf.estimators_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3], dtype=uint8)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Trying SGD Classifier. No need for OvR or OvO as\n",
     "# SGD directly classifies into multiple classes.\n",
     "sgd_clf.fit(X_train, y_train)\n",
-    "sgd_clf.predict([some_digits])"
+    "sgd_clf.predict([some_digit])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-31893.03095419, -34419.69069632,  -9530.63950739,\n",
+       "          1823.73154031, -22320.14822878,  -1385.80478895,\n",
+       "        -26188.91070951, -16147.51323997,  -4604.35491274,\n",
+       "        -12050.767298  ]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sgd_clf.decision_function([some_digit])"
    ]
@@ -860,9 +907,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.87365, 0.85835, 0.8689 ])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cross_val_score(sgd_clf, X_train, y_train,\n",
     "                cv=3, scoring=\"accuracy\")"
@@ -884,9 +942,23 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "scaler = StandardScaler()\n",
-    "x_train_scaled = scaler.fit_transform(X_train.astype(np.float64))\n",
-    "cross_val_score(sgd_clf,)"
+    "_train_scaled = scaler.fit_transform(X_train.astype(np.float64))\n",
+    "cross_val_score(sgd_clf, x_train_scaled, y_train, cv=3, scoring='accuracy')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Error Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
